# fs-thesis

./: .gitignore  GEMINI.md  LICENSE  Makefile  README.md  data_analysis.ipynb  db.py  ideen.md  install.md  pyproject.toml  requirements.txt  select.sql  to-do.md
Archive/: requirements.txt
agents/: data_scientist.md
docs/: README.md  ToDo.md  mkdocs.yml
docs/docs/: README.md  ToDo.md  documentation.md  fahrplan.md  getting-started.md  index.md  logbook.md  notes.md  references.md  resources.md  thesis.md  to-do.md
fs_thesis/: create_views.py  csv_analyzer.py  data_loader.py  helper.py  load_folder_to_duckdb.py  preprocessing.py
notebooks/: all_tables.ipynb  data_analysis.ipynb  diagnoses.ipynb  patients.ipynb  patients_demogra_time_to_event.ipynb  vizualisation.ipynb
notebooks/examples/: pca_on_iris_data.ipynb  principal-component-analysis.ipynb
notebooks/experiments/: pca_experiement.ipynb  tab_pfn_v2_robustness.ipynb
notebooks/tutorial/: principal-component-analysis.ipynb
notebooks/tutorials/: sklearn_one_hot_encoding.ipynb  sklearn_one_hot_encoding_marvel_characters.ipynb
scripts/: __init__.py
tests/: test_data.py
