[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fs_thesis"
version = "0.0.1"
description = "master thesis to predict diagnosis"
authors = [
  { name = "Andrey Kudryavtsev" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["fs_thesis"]
include = ["pyproject.toml", "fs_thesis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fs_thesis"]
force-sort-within-sections = true

