[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fs_thesis"
version = "0.0.1"
description = "Master thesis to predict diagnosis"
authors = [
  { name = "Andrey Kudryavtsev" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
# FIX: Changed from 3.14 to 3.13
requires-python = ">=3.13"

# LEAN: Core dependencies only
dependencies = [
    "numpy",
    "pandas",
    "polars>=1.0.0",
    "scikit-learn",
    "duckdb",
    "matplotlib",
    "plotly",
    "python-dotenv",
]

# LEAN: Tools you only use during research/coding
[project.optional-dependencies]
dev = [
    "ruff",
    "ipython",
    "jupyterlab",
    "notebook",
    "ipykernel",
    "mkdocs",
]

[tool.ruff]
line-length = 99
src = ["fs_thesis"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["fs_thesis"]
force-sort-within-sections = true